@@ -291,10 +291,15 @@ generate_monitor(FileName0, CritList, CovType) -->
 		print("_cov.in'\n"),
 		io__seen
 	;
+	    io__read_file_as_string(BeginningResult),
+	    (
+		{ BeginningResult = error(_, Msg3) },
+		print(Msg3)
+	    ;
+		{ BeginningResult = ok(Beginning) },
 		print("% File automatically generated by get_"),
 	        print(CovType),
 		print(".m\n\n"),
-		io__read_file_as_string(_, Beginning),
 		print(Beginning),
 		print("initialize(Acc) :- \n\t list__condense(["),
 		% I do not generate the list of call site in the first place
@@ -307,13 +312,14 @@ generate_monitor(FileName0, CritList, CovType) -->
 		print("], Acc)."),
 		io__told,
 		io__seen
-		),
+	    )
+	),
 	{ append_list([FileName2, "__", CovType], FileName4) },
 	io__tell(FileName4, Res3),
 	( 
-		{ Res3 = error(Msg3) }
+		{ Res3 = error(Msg4) }
 	->
-		print(Msg3)
+		print(Msg4)
 	;
 		print(CritList), 
 		print(".\n"),
