@@ -1,0 +1,24 @@
+First 0x20 characters of fig 1.4 in MG are
+`In the beginning there was the t'.
+First 0x1b characters of fig 1.4 in MG are
+`In the beginning there was '.
+First 0x25 characters of fig 1.4 in MG are
+`In the beginning there was the text, '.
+
+Following line should have 3, 4, 1 significant figures.
+Strangly, 1.00e+01+  10.000=  2E+01
+
+
+!%0 10.5i!%0+10.5i!%0 -10.5i!%0+-10.5i!
+!% 10.5i!%+10.5i!% -10.5i!%+-10.5i!
+!% 10.5x!%+10.5x!% -10.5x!%+-10.5x!
+!%#10.x!%#+10.x!%#-10.x!%#+-10.x!
+
+!    -00031!    -00031!-00031    !-00031    !
+!     00031!    +00031! 00031    !+00031    !
+!    -00031!    -00031!-00031    !-00031    !
+!     00031!    +00031! 00031    !+00031    !
+!  ffffffe1!  ffffffe1!ffffffe1  !ffffffe1  !
+!     0001f!     0001f!0001f     !0001f     !
+!0xffffffe1!0xffffffe1!0xffffffe1!0xffffffe1!
+!      0x1f!      0x1f!0x1f      !0x1f      !
